feat: Infrastructure hardening & query optimization (Phase 4)